# visdet

./: .all-contributorsrc  .gitignore  .import-linter.ini  .pre-commit-config.yaml  .skylosrc  AGENTS.md  ANALYSIS_FINDINGS.md  BUILD.yaml  CHANGELOG.md  CHANGE_LOG.md  CODEDIFF_AUDIT_SUMMARY.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SKYLOS.md  UNINTENDED_CHANGES.md  grog.toml  hatch_build.py  import-upstream-issues.py  imported-issues.json  justfile  mkdocs.yml  modal.toml  model-index.yml  prek.toml  pyproject.toml  pytest.ini  requirements-modal.txt  setup.py  test_file.txt
tools/codediff/: README.md  pyproject.toml
tools/codediff/codediff/: __init__.py  cli.py  comparator.py  hasher.py  parser.py  report.py
tools/codediff/tests/: __init__.py  test_comparator.py  test_parser.py
visdet/: AGENTS.md  __init__.py  core.py  pyproject.toml  registry.py  runner.py
visdet/_ext_demo/: __init__.py
visdet/apis/: __init__.py  det_inferencer.py  inference.py
visdet/core/: __init__.py  anchor.py  bbox.py  evaluation.py  hook.py  mask.py  optimizers.py  post_processing.py  utils.py
visdet/core/anchor/: __init__.py  anchor_generator.py
visdet/core/bbox/: __init__.py  assigners.py  coder.py  demodata.py  samplers.py
visdet/core/evaluation/: __init__.py  bbox_overlaps.py  mean_ap.py  recall.py
visdet/core/hook/: __init__.py  sync_norm_hook.py  sync_random_size_hook.py
visdet/core/mask/: __init__.py  structures.py
visdet/cv/: __init__.py  image.py
visdet/cv/cnn/: __init__.py
visdet/cv/fileio/: __init__.py
visdet/cv/image/: __init__.py  io.py
visdet/cv/ops/: __init__.py  nms.py  roi_align.py
visdet/cv/transforms/: __init__.py  builder.py  formatting.py  loading.py  processing.py  utils.py  wrappers.py
visdet/datasets/: __init__.py  base_det_dataset.py  builder.py  coco.py  dataset_wrappers.py  pipelines.py  utils.py
visdet/datasets/api_wrappers/: __init__.py  cocoeval_mp.py
visdet/datasets/samplers/: __init__.py  class_aware_sampler.py  distributed_sampler.py  group_sampler.py  infinite_sampler.py
visdet/datasets/transforms/: __init__.py  formatting.py  load_image.py  loading.py  transforms.py
visdet/ddp/: __init__.py  auto_ddp.py
visdet/engine/: __init__.py  dataset.py  dist.py  infer.py  logging.py  registry.py  visualization.py
visdet/engine/_strategy/: __init__.py  base.py  deepspeed.py  distributed.py  fsdp.py  single_device.py
visdet/engine/config/: __init__.py  config.py  config_wrapper.py  schema_generator.py  utils.py  yaml_loader.py
visdet/engine/dataset/: __init__.py  base_dataset.py  dataset_wrapper.py  sampler.py  utils.py
visdet/engine/device/: __init__.py
visdet/engine/evaluator/: __init__.py  evaluator.py  metric.py
visdet/engine/fileio/: __init__.py  file_client.py  io.py  parse.py
visdet/engine/hooks/: __init__.py  base_hook.py  checkpoint_hook.py  early_stopping_hook.py  ema_hook.py  empty_cache_hook.py  hook.py  iter_timer_hook.py  naive_visualization_hook.py  param_scheduler_hook.py  runtime_info_hook.py  sampler_seed_hook.py  sync_buffer_hook.py  visualization_hook.py
visdet/engine/hub/: __init__.py  hub.py  huggingface.json
visdet/engine/infer/: __init__.py  infer.py
visdet/engine/logging/: __init__.py  logger.py  message_hub.py
visdet/engine/model/: __init__.py  base_module.py  utils.py  weight_init.py
visdet/engine/optim/: __init__.py
visdet/engine/registry/: __init__.py  build_functions.py  registry.py  root.py  utils.py
visdet/engine/runner/: __init__.py  _flexible_runner.py  auto_train.py  checkpoint.py  log_processor.py  loops.py  runner.py
visdet/engine/structures/: __init__.py  base_data_element.py  instance_data.py  label_data.py  pixel_data.py
visdet/engine/utils/: __init__.py  misc.py  path.py  progressbar.py
visdet/engine/visualization/: __init__.py  vis_backend.py  visualizer.py
visdet/evaluation/: __init__.py
visdet/evaluation/functional/: __init__.py  class_names.py  mean_ap.py  panoptic_utils.py  recall.py
visdet/evaluation/metrics/: __init__.py  coco_metric.py
visdet/models/: __init__.py  builder.py
visdet/models/backbones/: __init__.py  cspnext.py  hrnet.py  regnet.py  res2net.py  resnest.py  resnet.py  resnext.py  swin.py  trident_resnet.py  vitdet.py
visdet/models/data_preprocessors/: __init__.py  data_preprocessor.py
visdet/models/dense_heads/: __init__.py  anchor_free_head.py  anchor_head.py  atss_head.py  autoassign_head.py  base_dense_head.py  centernet_head.py  detr_head.py  fcos_head.py  fovea_head.py  fsaf_head.py  gfl_head.py  paa_head.py  placeholders.py  retina_head.py  rpn_head.py  rtmdet_head.py  rtmdet_ins_head.py  ssd_head.py  yolo_head.py  yolof_head.py  yolox_head.py
visdet/models/detectors/: __init__.py  anchor_free_detectors.py  atss.py  autoassign.py  cascade_rcnn.py  detr.py  fast_rcnn.py  faster_rcnn.py  fcos.py  gfl.py  mask_rcnn.py  paa.py  retinanet.py  rtmdet.py  single_stage.py  ssd.py  two_stage.py  yolo_detectors.py  yolof.py
visdet/models/layers/: __init__.py  bbox_nms.py  csp_layer.py  normed_predictor.py  se_layer.py  spp_layer.py  transformer.py
visdet/models/losses/: __init__.py  accuracy.py  balanced_l1_loss.py  cross_entropy_loss.py  dice_loss.py  focal_loss.py  gaussian_focal_loss.py  gfocal_loss.py  ghm_loss.py  iou_loss.py  mse_loss.py  smooth_l1_loss.py  utils.py  varifocal_loss.py
visdet/models/necks/: __init__.py  bfp.py  cspnext_pafpn.py  dilated_encoder.py  fpn.py
visdet/presets/: __init__.py  registry.py
visdet/py_configs/: __init__.py  builders.py  presets.py
visdet/schemas/: __init__.py  backbones.py  base.py  data.py  heads.py  models.py  necks.py  training.py
visdet/structures/: __init__.py  det_data_sample.py
visdet/testing/: __init__.py  _utils.py
visdet/tests/: test_patch_merging_mmcv_compatibility.py
visdet/utils/: __init__.py  fiftyone_utils.py  misc.py  setup_env.py  typing_utils.py
visdet/visdet/: __init__.py  runner.py
visdet/visdet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
visdet/visualization/: __init__.py  local_visualizer.py  palette.py
(+689 files in other folders)
