[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visdet"
version = "2.28.4"
description = "Visia's fork of MMDetection - Object Detection Toolbox and Benchmark"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Apache License 2.0"}
authors = [
    {name = "George Pearse", email = "george@visia.ai"},
    {name = "MMDetection Contributors", email = "openmmlab@gmail.com"},
]
keywords = ["computer vision", "object detection", "mmdetection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "addict",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pycocotools",
    "pyyaml",
    "rich",
    "scipy",
    "shapely",
    "six",
    "termcolor",
    "terminaltables",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "tqdm>=4.67.1",
    "yapf",
]

[project.optional-dependencies]
optional = [
    "cityscapesscripts",
    "imagecorruptions",
    "scikit-learn",
]

mim = [
    "openmim",
]

albu = [
    "albumentations>=0.3.2",
]

mkdocs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

tests = [
    "asynctest>=0.13.0",
    "codecov",
    "flake8",
    "interrogate",
    "isort==4.3.21",
    "kwarray",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "parameterized",
    "protobuf>=3.20.0,<4.25.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ubelt",
    "xdoctest>=0.10.0",
    "yapf",
]

all = [
    "cityscapesscripts",
    "imagecorruptions",
    "scikit-learn",
    "albumentations>=0.3.2",
]

[project.urls]
Homepage = "https://binitai.github.io/visdet/"
Repository = "https://github.com/BinItAI/visdet"
Documentation = "https://binitai.github.io/visdet/"
"Original Project" = "https://github.com/open-mmlab/mmdetection"

[tool.hatch.build]
# Exclude nested pyproject.toml that was part of old workspace structure
exclude = [
    "visdet/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
# The package code is in visdet/ - tell hatchling where to find it
packages = ["visdet"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E721", "F401", "F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["visdet"]
split-on-trailing-comma = true
force-single-line = false

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["mmdet"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "prek>=0.2.10",
    "ruff",
    "skylos",
    "zuban>=0.1.2",
]


# Note: mmtracking git dependency removed due to build isolation issues
# To install for tests: uv pip install --no-build-isolation git+https://github.com/open-mmlab/mmtracking.git

# Test token: ci-pipeline-verification-token-001
