[project]
name = "visdet"
version = "0.1.0"
description = "Swin Mask R-CNN for object detection and instance segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "torch==2.5.1; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torchvision==0.20.1; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "pycocotools>=2.0.0",
    "scipy>=1.9.0",
    "shapely>=2.0.0",
    "matplotlib>=3.6.0",
    "terminaltables>=3.1.0",
    "tqdm>=4.60.0",
    "parameterized>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["visdet*"]

[tool.setuptools.package-data]
'*' = ['*.yaml', '*.json', '*.yml']
