[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visdet-codediff"
version = "0.1.0"
description = "Semantic code comparison tool for Python - compares implementations ignoring whitespace/formatting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "George Pearse", email = "george@visia.ai"},
]
keywords = ["code-analysis", "semantic-diff", "ast", "comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
codediff = "codediff.cli:main"

[project.urls]
Homepage = "https://github.com/BinItAI/visdet"
Repository = "https://github.com/BinItAI/visdet"
Documentation = "https://binitai.github.io/visdet/"

[tool.hatch.build.targets.wheel]
packages = ["codediff"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E721", "F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
